# eredes-omie

./: .env.template  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
eredes_omie/: __main__.py  consumption_history.py  losses_profiles.py  months.py  plot.py  prices.py  shelly.ipynb  utils.py
eredes_omie/e_redes/: consumption_history.py  months.py
eredes_omie/energy_meters/: shelly.py
eredes_omie/erse/: losses_profiles.py
eredes_omie/omie/: energy_prices.py  prices.py
eredes_omie/operators/: repsol.py
eredes_omie/providers/: repsol.py
eredes_omie/shelly/: shelly.py
