[tool.poetry]
name = "eredes-omie"
version = "0.1.0"
description = ""
authors = ["jpedrocr <jpedrocr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
selenium = "^4.19.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
