[tool.poetry]
name = "eredes-omie"
version = "0.1.0"
description = ""
authors = ["jpedrocr <jpedrocr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
selenium = "^4.19.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
requests = "^2.31.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
